--- a/QRCodeService.Service/QRCodeService.Service.csproj
+++ b/QRCodeService.Service/QRCodeService.Service.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BarcodeLib" Version="3.1.5" />
     <PackageReference Include="QRCoder" Version="1.7.0" />
+    <PackageReference Include="ZXing.Net.Bindings.Windows.Compatibility" Version="0.16.14" />
   </ItemGroup>
 
 </Project>
